apply plugin: 'com.android.application'

android {
    compileSdkVersion 29
    buildToolsVersion "29.0.3"
    defaultConfig {
        applicationId "com.usbtv.demo"
        minSdkVersion 21
        targetSdkVersion 29
        versionCode 1
        versionName "1.0"
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8

    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'androidx.leanback:leanback:1.0.0'
    implementation 'androidx.appcompat:appcompat:1.1.0'
    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'

    //butterknife
    implementation 'com.jakewharton:butterknife:10.1.0'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'

    //implementation 'com.yanzhenjie:andserver:1.0.2'
    implementation 'com.yanzhenjie.andserver:api:2.0.1'
    annotationProcessor 'com.yanzhenjie.andserver:processor:2.0.1'
    implementation 'com.squareup.retrofit2:retrofit:2.5.0'

    implementation 'com.danikula:videocache:2.6.4'
    implementation 'net.sourceforge.javacsv:javacsv:2.0'
    implementation 'com.alibaba:fastjson:1.2.3'

}
